@@ -1,4 +1,9 @@
-$Id: CHANGELOG,v 1.1.2.1 2008/05/03 20:11:08 professorbikeybike Exp $
+$Id: CHANGELOG,v 1.1.2.2 2009/05/22 20:25:29 professorbikeybike Exp $
+
+DRUPAL-6--1-0, 2009-05-22
+-------------------------
+- Fixed issue with multiple input filters.
+- Added WoWHead support.
 
 DRUPAL-6, 2008-05-03
 --------------------
